Fixed visibility of folder marked in message list

--- a/styles/desktop/mail.less
+++ b/styles/desktop/mail.less
@@ -60,6 +60,7 @@
 			font-size: 8pt;
 			font-weight: normal;
 			margin-top: 1px;
+			margin-left: 4px;
 			padding: 0px 6px 1px;
 		}
 		.custom_marker,
