--- a/styles/styles.less
+++ b/styles/styles.less
@@ -164,7 +164,8 @@
 		}
 
 		.folder_marker {
-			display: block;
+			display: block !important;
+			background: #9ba9c5 !important;
 		}
 
 		.item:not(.selected):not(.checked) {
